--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "zod": "^3.23.5"
   }
 }
