--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.3",
+    "redis": "^4.6.13",
     "zod": "^3.23.5"
   }
 }
